# simple-game-engine

./: .gitignore  CMakeLists.txt  README.md  gui.cpp
external_headers/glad/: glad.h
headers/: components.h  utils.h
